tdf#94709 - protect TableWindowTitle Command execution.

Change-Id: I202a154e18c1fbffc31abcc7ccd7f500b67a4c13